<resources>
    <string name="app_name">YouTrader</string>

    <string name="base_url">https://api.coincap.io/v2/</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_hint">Поиск</string>

    <string name="pin_reg_logo">Установка PIN</string>
    <string name="pin_auth_logo">Авторизация по PIN</string>

    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="to_sign_in">Вход</string>
    <string name="to_sign_up">Регистрация</string>

    <string name="profile_portrait">Profile photo</string>
    <string name="full_name">Терентьев Михаил Палыч</string>
    <string-array name="currencies">
        <item>RUB</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
    <string name="profile_convert_text">Конвертировать в</string>
    <string name="profile_pin_code_text">Вход по пинкоду</string>
    <string name="profile_desc_full_name">ФИО</string>
    <string name="main_fragment_title">Главная</string>
    <string name="briefcase_fragment_title">Портфель</string>
    <string name="profile_fragment_title">Профиль</string>
    <string name="pin_auth_fragment_title">Авторизация по PIN</string>
    <string name="pin_reg_fragment_title">Регистрация PIN</string>
    <string name="shared_preference_name">OurSharedPref</string>
    <string name="enter_email_hint">Введите email</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="enter_button_text">Войти</string>
    <string name="currency_name_content_description">currency_name</string>
    <string name="currency_price_content_description">price</string>
    <string name="auth_fragment_label">Авторизация</string>
    <string name="reg_fragment_label">Регистрация</string>
    <string name="currencies_fragment_label">Информация о валютах</string>
    <string name="info_currency_fragment_label">История операций</string>
    <string name="profile_fragment_label">Профиль</string>
    <string name="portfolio_fragment_label">Портфель</string>
    <string name="chart_fragment_label">График</string>
    <string name="currency_count_description">number of units</string>
    <string name="total_profit_description">total profit</string>
    <string name="portfolio_value_description">portfolio value</string>
    <string name="portfolio_status_description">portfolio status</string>
    <string name="buy_amount_of_currency_hint">0</string>
    <string name="portfolio_status_title">Состояние портфеля</string>
    <string name="buy_currency_button">Приобрести</string>
    <string name="amount_label">Количество:</string>
    <string name="sum_title">Сумма:</string>
    <string name="auth_success">Авторизация прошла успешно</string>
    <string name="auth_error">Произошла ошибка при попытке авторизации</string>
    <string name="registration_success">Регистрация прошла успешно</string>
    <string name="registration_error">Произошла ошибка при попытке регистрации</string>
    <string name="chart_interval_day">Д</string>
    <string name="chart_interval_week">Н</string>
    <string name="chart_interval_month">М</string>
    <string name="chart_interval_year">Г</string>
    <string name="invalid_input">Введен неверный формат числа</string>
    <string name="buy_successful">"Вы приобрели"</string>
    <string name="buy_unsuccessful">"Ошибка при покупке"</string>
    <string name="not_registered_title">Еще не зарегистрированы?</string>
    <string name="have_account_already">Уже есть учетная запись?</string>
    <string name="update_password_button">Изменить пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_fio">Изменить ФИО</string>
    <string name="change_password">Изменить пароль</string>
    <string name="password_was_successfully_changed">Пароль был успешно изменен</string>
    <string name="password_changing_error">Произошла ошибка при попытке смены пароля</string>
    <string name="sign_out_error">Произошла ошибка при попытке выхода из приложения</string>
    <string name="auth_app_title">ТыТрейдер</string>
    <string name="value_with_currency_string_template">Активы: $%s</string>
    <string name="profit_with_percentage">%1$s $ (%2$s %%)</string>
    <string name="profit_title">Прибыль</string>
    <string name="auth_state_key">authStateKey</string>
    <string name="pin_code_key">pin</string>
    <string name="value_is_not_defined">undefined</string>
    <string name="repeat_pin_code">Повторите PIN</string>
    <string name="pin_set_successfully">PIN успешно установлен</string>
    <string name="pin_mismatch">PIN коды не совпадают</string>
    <string name="pin_is_incorrect">Введен неверный PIN</string>
    <string name="profile_name_key">full_name</string>
    <string name="new_user_full_name">Новый пользователь</string>
</resources>