<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.technopark.youtrader.ui.auth.AuthFragment"
        android:label="@string/auth_fragment_label">
        <action
            android:id="@+id/action_authFragment_to_regFragment"
            app:destination="@id/regFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true">
        </action>
        <action
            android:id="@+id/action_authFragment_to_currenciesFragment"
            app:destination="@id/currenciesFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true">
        </action>
    </fragment>
    <fragment
        android:id="@+id/regFragment"
        android:name="com.technopark.youtrader.ui.auth.RegFragment"
        android:label="@string/reg_fragment_label">
        <action
            android:id="@+id/action_regFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/regFragment"
            app:popUpToInclusive="true">
        </action>
        <action
            android:id="@+id/action_regFragment_to_currenciesFragment"
            app:destination="@id/currenciesFragment"
            app:popUpTo="@id/regFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/currenciesFragment"
        android:name="com.technopark.youtrader.ui.currencies.CurrenciesFragment"
        android:label="@string/currencies_fragment_label">
        <action
            android:id="@+id/action_currenciesFragment_to_authFragment"
            app:destination="@id/authFragment" />
        <action
            android:id="@+id/action_currenciesFragment_to_chartFragment"
            app:destination="@id/chartFragment">
            <argument
                android:name="id"
                app:argType="string"
                android:defaultValue="empty" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.technopark.youtrader.ui.profile.ProfileFragment"
        android:label="@string/profile_fragment_label">

        <action
            android:id="@+id/action_profileFragment_to_PinRegFragment"
            app:destination="@id/pinRegFragment" />
    </fragment>
    <fragment
        android:id="@+id/portfolioFragment"
        android:name="com.technopark.youtrader.ui.portfolio.PortfolioFragment"
        android:label="@string/portfolio_fragment_label">
        <action
            android:id="@+id/action_portfolioFragment_to_infoHistoryFragment"
            app:destination="@id/infoHistoryFragment">
            <argument
                android:name="currencyId"
                app:argType="string"
                android:defaultValue="empty" />
        </action>

    </fragment>
    <fragment
        android:id="@+id/chartFragment"
        android:name="com.technopark.youtrader.ui.chart.ChartFragment"
        android:label="@string/chart_fragment_label">
    </fragment>
    <fragment
        android:id="@+id/infoHistoryFragment"
        android:name="com.technopark.youtrader.ui.currencies.InfoCurrencyFragment"
        android:label="@string/info_currency_fragment_label">
    </fragment>
    <fragment
        android:id="@+id/pinRegFragment"
        android:name="com.technopark.youtrader.ui.pin.PinRegFragment"
        android:label="PinRegFragment">
        <action
            android:id="@+id/action_PinRegFragment_to_ProfileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/pinAuthFragment"
        android:name="com.technopark.youtrader.ui.pin.PinAuthFragment"
        android:label="PinAuthFragment" >
        <action
            android:id="@+id/action_PinAuthFragment_to_CurrenciesFragment"
            app:destination="@id/currenciesFragment"
            app:popUpTo="@id/pinAuthFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>