<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    style="@style/CustomCardView"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <TextView
        android:id="@+id/currency_name"
        style="@style/OneLineTextNoPaddingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="160sp"
        android:layout_marginStart="@dimen/indent_small"
        android:contentDescription="@string/currency_name_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BitCoin"
        />
    <TextView
        android:id="@+id/currency_count"
        style="@style/OneLineTextNoPaddingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="160sp"
        android:contentDescription="@string/currency_count_description"
        android:textColor="@color/shuttle_gray"
        android:layout_marginStart="@dimen/indent_small"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/currency_name"
        tools:text="1 шт."
        android:textSize="@dimen/text_size_h4.5"
        />

    <TextView
        android:id="@+id/price"
        style="@style/OneLineTextNoPaddingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="160sp"
        android:layout_marginEnd="@dimen/indent_small"
        android:contentDescription="@string/currency_price_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_price"
        tools:text="64 193,2" />

    <TextView
        android:id="@+id/change_price"
        style="@style/OneLineTextNoPaddingView"
        android:textSize="@dimen/text_size_h4.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="160sp"
        android:contentDescription="@string/currency_price_content_description"
        android:layout_marginEnd="@dimen/indent_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="+1 705,90 (+2,73%)"
        />
</androidx.constraintlayout.widget.ConstraintLayout>