<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/text_portfolio_status"
        style="@style/RoundedBigTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_small"
        android:layout_marginTop="28dp"
        android:height="150dp"
        android:contentDescription="@string/portfolio_status_description"
        android:gravity="center|top"
        android:text="Состояние портфеля"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/portfolio_value"
        style="@style/OneLineTextNoPaddingView"
        android:textSize="@dimen/text_size_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/portfolio_value_description"
        app:layout_constraintTop_toTopOf="@id/text_portfolio_status"
        app:layout_constraintBottom_toBottomOf="@id/text_portfolio_status"
        app:layout_constraintStart_toStartOf="@id/text_portfolio_status"
        app:layout_constraintEnd_toEndOf="@id/text_portfolio_status"
        tools:text="64 193,2 $"
        android:text="68 775,51856 $"
        />
    <TextView
        android:id="@+id/total_profit"
        style="@style/OneLineTextNoPaddingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/total_profit_description"
        app:layout_constraintTop_toBottomOf="@id/portfolio_value"
        app:layout_constraintEnd_toEndOf="@id/text_portfolio_status"
        app:layout_constraintStart_toStartOf="@id/text_portfolio_status"
        tools:text="+1 706,90 (2.73.%)"
        android:text="+1 705,919 (2,66%)"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/portfolio_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/indent_medium"
        android:layout_marginHorizontal="@dimen/indent_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_portfolio_status"
        tools:itemCount="1"
        tools:listitem="@layout/portfolio_item"

        />

</androidx.constraintlayout.widget.ConstraintLayout>